Fix text alignment and background color on Work tabs

--- a/src/dataflow/dataflow.sass
+++ b/src/dataflow/dataflow.sass
@@ -232,6 +232,9 @@ $list-item-scale: 0.1
         margin-bottom: 2px
         width: 49px
         padding-left: 0px
+        text-align: center
+        padding: 6px
+        background-color: $gray-light-2
         &.active
           background: #ffffff
           background-color: #ffffff
